--- a/HandsOn/Dockerfile
+++ b/HandsOn/Dockerfile
@@ -6,18 +6,17 @@ EXPOSE 8080
 # Etapa de build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["HandsOn/HandsOn.csproj", "HandsOn/"]
-RUN dotnet restore "HandsOn/HandsOn.csproj"
+COPY ["ChartOfAccounts.Api.csproj", "."]
+RUN dotnet restore "./ChartOfAccounts.Api.csproj"
 COPY . .
-WORKDIR "/src/HandsOn"
-RUN dotnet build "HandsOn.csproj" -c Release -o /app/build
+RUN dotnet build "ChartOfAccounts.Api.csproj" -c Release -o /app/build
 
 # Etapa de publish
 FROM build AS publish
-RUN dotnet publish "HandsOn.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "ChartOfAccounts.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # Imagem final
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "HandsOn.dll"]
+ENTRYPOINT ["dotnet", "ChartOfAccounts.Api.dll"]
