--- a/ChartOfAccounts.Api/appsettings.json
+++ b/ChartOfAccounts.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
