feat: estrutura inicial do escopo do projeto

--- a/ChartOfAccounts.Application/ChartOfAccounts.Application.csproj
+++ b/ChartOfAccounts.Application/ChartOfAccounts.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChartOfAccounts.Domain\ChartOfAccounts.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
