feat: remocao de ParentCode do mapeamento e criacao de um mapper

--- a/ChartOfAccounts.Api/appsettings.json
+++ b/ChartOfAccounts.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234"
+    "DefaultConnection": "Host=Postgres;Port=5432;Database=accounts;Username=root;Password=root1234"
   },
   "Logging": {
     "LogLevel": {
