--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,39 @@
-version: '3.8'
+version: "3.9"
 
 services:
   postgres:
-    image: postgres:16
-    container_name: postgres
+    image: postgres:15
+    container_name: Postgres
+    restart: always
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root1234
+      POSTGRES_DB: accounts
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "5432:5432"
     networks:
-      - chart_network
+      - container_network
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
-  chart-api:
+  hands-on-api:
+    image: hands-on-dev-api  # Imagem já buildada ou buildada via context abaixo
+    container_name: hands-on-dev-container
     build:
       context: .
-      dockerfile: dockerfile
-    container_name: chart-api
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    environment:
-      ConnectionStrings__DefaultConnection: ${CONNECTION_STRING}
     depends_on:
       - postgres
+    environment:
+      ConnectionStrings__DefaultConnection: "Host=Postgres;Port=5432;Database=accounts;Username=root;Password=root1234"
     networks:
-      - chart_network
+      - container_network
 
 networks:
-  chart_network:
+  container_network:
+    driver: bridge
 
 volumes:
-  pg_data:
+  pgdata:
