refactor: restruturando para adequar ao processo de utilização do RequestContext no processo de indentificação

--- a/ChartOfAccounts.Infrastructure/ChartOfAccounts.Infrastructure.csproj
+++ b/ChartOfAccounts.Infrastructure/ChartOfAccounts.Infrastructure.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChartOfAccounts.Application\ChartOfAccounts.Application.csproj" />
+    <ProjectReference Include="..\ChartOfAccounts.CrossCutting\ChartOfAccounts.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
