--- a/ChartOfAccounts.Api/ChartOfAccounts.Api.csproj
+++ b/ChartOfAccounts.Api/ChartOfAccounts.Api.csproj
@@ -18,7 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChartOfAccounts.Application\ChartOfAccounts.Application.csproj" />
     <ProjectReference Include="..\ChartOfAccounts.CrossCutting\ChartOfAccounts.CrossCutting.csproj" />
+    <ProjectReference Include="..\ChartOfAccounts.Domain\ChartOfAccounts.Domain.csproj" />
+    <ProjectReference Include="..\ChartOfAccounts.Infrastructure\ChartOfAccounts.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
