feat: remodelando a estrutura de excessoes e erros para chain of responsabily + strategy

--- a/ChartOfAccounts.Api/appsettings.Development.json
+++ b/ChartOfAccounts.Api/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
