feat: inclusao de estruturacao para receber tentantid, requestid e idempotencykey

--- a/ChartOfAccounts.Application/ChartOfAccounts.Application.csproj
+++ b/ChartOfAccounts.Application/ChartOfAccounts.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ChartOfAccounts.CrossCutting\ChartOfAccounts.CrossCutting.csproj" />
     <ProjectReference Include="..\ChartOfAccounts.Domain\ChartOfAccounts.Domain.csproj" />
   </ItemGroup>
 
