--- a/ChartOfAccounts.Infrastructure/ChartOfAccounts.Infrastructure.csproj
+++ b/ChartOfAccounts.Infrastructure/ChartOfAccounts.Infrastructure.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ChartOfAccounts.CrossCutting\ChartOfAccounts.CrossCutting.csproj" />
+    <ProjectReference Include="..\ChartOfAccounts.Domain\ChartOfAccounts.Domain.csproj" />
   </ItemGroup>
 
 </Project>
