feat: adequação do processo de captura e conexao multitenancy

--- a/ChartOfAccounts.Api/appsettings.json
+++ b/ChartOfAccounts.Api/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=Postgres;Port=5432;Database=accounts;Username=root;Password=root1234"
+    "DefaultConnection": "Host=Postgres;Port=5432;Database=accounts;Username=root;Password=root1234",
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000001": "Host=localhost;Database=tenant1_db;Username=postgres;Password=secret1",
+    "Tenant_5e0d1c8a-2000-4000-b000-000000000002": "Host=localhost;Database=tenant2_db;Username=postgres;Password=secret2",
+    "Tenant_5e0d1c8a-3000-4000-b000-000000000003": "Host=localhost;Database=tenant3_db;Username=postgres;Password=secret3"
   },
   "Logging": {
     "LogLevel": {
