--- a/ChartOfAccounts.Api/appsettings.Development.json
+++ b/ChartOfAccounts.Api/appsettings.Development.json
@@ -1,9 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234",
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000001": "Host=localhost;Database=tenant1_db;Username=postgres;Password=secret1",
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000002": "Host=localhost;Database=tenant2_db;Username=postgres;Password=secret2",
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000003": "Host=localhost;Database=tenant3_db;Username=postgres;Password=secret3"
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000001": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234",
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000002": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234",
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000003": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234"
   },
   "Logging": {
     "LogLevel": {
