--- a/ChartOfAccounts.Api/ChartOfAccounts.Api.csproj
+++ b/ChartOfAccounts.Api/ChartOfAccounts.Api.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\ChartOfAccounts.Infrastructure\ChartOfAccounts.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
 </Project>
