--- a/ChartOfAccounts.Api/appsettings.Development.json
+++ b/ChartOfAccounts.Api/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000001": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234",
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000002": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234",
-    "Tenant_5e0d1c8a-1000-4000-b000-000000000003": "Host=localhost;Port=5432;Database=accounts;Username=root;Password=root1234"
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000001": "Host=Postgres;Port=5432;Database=accounts;Username=postgresuser;Password=admin1234",
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000002": "Host=Postgres;Port=5432;Database=accounts;Username=postgresuser;Password=admin1234",
+    "Tenant_5e0d1c8a-1000-4000-b000-000000000003": "Host=Postgres;Port=5432;Database=accounts;Username=postgresuser;Password=admin1234"
   },
   "Logging": {
     "LogLevel": {
